# pkg/models/move_task_order.go
@@ -15,17 +15,17 @@ import (
 
 // MoveTaskOrder is an object representing the task orders for a move
 type MoveTaskOrder struct {
-	ID                       uuid.UUID        `db:"id"`
-	MoveOrder                MoveOrder        `belongs_to:"move_orders"`
-	MTOServiceItems          []MTOServiceItem `has_many:"mto_service_items"`
-	PaymentRequests          []PaymentRequest `has_many:"payment_requests"`
-	MoveOrderID              uuid.UUID        `db:"move_order_id"`
-	ReferenceID              *string          `db:"reference_id"`
-	PersonallyProcuredMoveID uuid.UUID        `db:"personally_procured_move_id"`
-	IsAvailableToPrime       bool             `db:"is_available_to_prime"`
-	IsCanceled               bool             `db:"is_canceled"`
-	CreatedAt                time.Time        `db:"created_at"`
-	UpdatedAt                time.Time        `db:"updated_at"`
+	ID                     uuid.UUID              `db:"id"`
+	MoveOrder              MoveOrder              `belongs_to:"move_orders"`
+	MTOServiceItems        []MTOServiceItem       `has_many:"mto_service_items"`
+	PaymentRequests        []PaymentRequest       `has_many:"payment_requests"`
+	MoveOrderID            uuid.UUID              `db:"move_order_id"`
+	ReferenceID            *string                `db:"reference_id"`
+	PersonallyProcuredMove PersonallyProcuredMove `has_one:"personally_procured_move"`
+	IsAvailableToPrime     bool                   `db:"is_available_to_prime"`
+	IsCanceled             bool                   `db:"is_canceled"`
+	CreatedAt              time.Time              `db:"created_at"`
+	UpdatedAt              time.Time              `db:"updated_at"`
 }
 
 // Validate gets run every time you call a "pop.Validate*" (pop.ValidateAndSave, pop.ValidateAndCreate, pop.ValidateAndUpdate) method.
